--- a/ferramentas.html
+++ b/ferramentas.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
 
-  <div class="container">
+    <div class="container">
     <aside class="side-menu">
       <ul>
         <li><a href="filtro.html">Filtro</a></li>
@@ -27,6 +27,7 @@
         <li><a href="xml.html">Leitor XML</a></li>
         <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
@@ -37,12 +38,9 @@
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-
         <!-- Repita conforme necessário -->
       </ul>
     </aside>
-
     <main>
       <h2>Bem-vindo!</h2>
       <p>
