--- a/menu_lateral.html
+++ b/menu_lateral.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Menu Lateral</title>
-  <link rel="stylesheet" href="css/menu_lateral.css"> <!-- mesmo CSS da página principal -->
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="css/menu_lateral.css" />
 </head>
 <body>
   <aside class="side-menu">
@@ -11,7 +10,10 @@
       <li><a href="filtro.html">Filtro</a></li>
       <li><a href="enumerador.html">Enumerador</a></li>
       <li><a href="juntar_ofx.html">Juntar OFX</a></li>
-      <!-- outros itens -->
+      <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
+      <li><a href="xml.html">Leitor XML</a></li>
+      <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
+      <li><a href="conciliacao.html">Conciliação</a></li>
     </ul>
   </aside>
 </body>
