--- a/pdf_to_Excel.html
+++ b/pdf_to_Excel.html
@@ -27,7 +27,8 @@
     </nav>
   </header>
 
-  <div class="container">
+
+    <div class="container">
     <aside class="side-menu">
       <ul>
         <li><a href="filtro.html">Filtro</a></li>
@@ -37,7 +38,7 @@
         <li><a href="xml.html">Leitor XML</a></li>
         <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
