--- a/conciliacao.html
+++ b/conciliacao.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <div class="container">
+    <div class="container">
     <aside class="side-menu">
       <ul>
         <li><a href="filtro.html">Filtro</a></li>
@@ -28,9 +28,22 @@
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="xml.html">Leitor XML</a></li>
+        <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
+        <li><a href="conciliacao.html">Conciliação</a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <!-- Repita conforme necessário -->
       </ul>
     </aside>
-
     <main>
       <section class="conciliador">
         <h2>Conciliador de Planilhas</h2>
