--- a/xml.html
+++ b/xml.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raitec Solutions</title>
   <link rel="stylesheet" href="css/header.css" />
-  <link rel="stylesheet" href="css/menu_lateral.css">
-  <link rel="stylesheet" href="css/xml.css">
+  <link rel="stylesheet" href="css/menu_lateral.css" />
+  <link rel="stylesheet" href="css/xml.css" />
+</head>
 <body class="ferramentas-page">
   <header>
     <h1>Ferramentas Contábeis</h1>
@@ -26,41 +27,22 @@
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="xml.html">Leitor XML</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-
-        <!-- Repita conforme necessário -->
+        <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
+        <li><a href="conciliacao.html">Conciliação</a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
       </ul>
     </aside>
 
     <main>
-      <div class="container">
-        <h1>Visualizador de NFSe</h1>
+      <h1>Visualizador de Nota Fiscal Eletrônica</h1>
+      <input type="file" id="xmlInput" accept=".xml" />
+      <div id="output"></div>
 
-        <!-- Área de controles: input + botão -->
-        <div id="controls">
-          <input type="file" id="xmlFiles" accept=".xml" multiple />
-          <button id="pdfBtn" onclick="generatePDF()" style="display:none;">📄 Salvar em PDF</button>
-        </div>
-
-        <!-- Área onde as notas serão exibidas -->
-        <div id="output"></div>
-      </div>
-
-      <!-- Script principal -->
     </main>
-    <script src="js/xml.js"></script>
-  </div>
+
+    </div>
+
+  <!-- Script principal -->
+  <script src="js/xml.js"></script>
 </body>
 </html>
