--- a/juntar_excel.html
+++ b/juntar_excel.html
@@ -28,7 +28,7 @@
         <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="juntar_excel.html"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
