--- a/juntar_excel.html
+++ b/juntar_excel.html
@@ -25,10 +25,10 @@
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="xml.html">Leitor XML</a></li>
-        <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
+        <li><a href="pdf_to_Excel.html">PDF to Excel</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
-        <li><a href="juntar_excel.html"></a></li>
+        <li><a href="juntar_excel.html">Juntar Excel</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
