--- a/juntar_pdf.html
+++ b/juntar_pdf.html
@@ -43,12 +43,12 @@
       </ul>
     </aside>
     <main>
-      <section class="pdf-merger">
-        <h2>Juntar Arquivos PDF</h2>
-        <input type="file" id="pdfFiles" multiple accept="application/pdf" />
-        <button onclick="mergePDFs()">Juntar PDFs</button>
-        <p id="status"></p>
-      </section>
+      <h2>📎 Juntar Arquivos PDF</h2>
+      <input type="file" id="pdfFiles" multiple accept="application/pdf" />
+      <br>
+      <button onclick="mergePDFs()">Juntar e Baixar</button>
+      <p id="status"></p>
+
     </main>
   </div>
 
