--- a/juntar_excel.html
+++ b/juntar_excel.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raitec Solutions</title>
+   <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/menu_lateral.css">
 <body class="ferramentas-page">
