--- a/menu_lateral.html
+++ b/menu_lateral.html
@@ -7,13 +7,24 @@
 <body>
   <aside class="side-menu">
     <ul>
-      <li><a href="filtro.html">Filtro</a></li>
-      <li><a href="enumerador.html">Enumerador</a></li>
-      <li><a href="juntar_ofx.html">Juntar OFX</a></li>
-      <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
-      <li><a href="xml.html">Leitor XML</a></li>
-      <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
-      <li><a href="conciliacao.html">Conciliação</a></li>
+        <li><a href="filtro.html">Filtro</a></li>
+        <li><a href="enumerador.html">Enumerador</a></li>
+        <li><a href="juntar_ofx.html">Juntar OFX</a></li>
+        <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
+        <li><a href="xml.html">Leitor XML</a></li>
+        <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
+        <li><a href="conciliacao.html">Conciliação</a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
     </ul>
   </aside>
 </body>
