--- a/ofx_to_excel_to_ofx.html
+++ b/ofx_to_excel_to_ofx.html
@@ -28,7 +28,7 @@
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="xml.html">Leitor XML</a></li>
-        <li><a href="pdf_to_Excel.html">PDF to EXCEL</a></li>
+        <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="#"></a></li>
