mudanças na barra lateral inclusao do PDF to Excel

--- a/menu_lateral.html
+++ b/menu_lateral.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <aside class="side-menu">
-    <ul>
+      <ul>
         <li><a href="filtro.html">Filtro</a></li>
         <li><a href="enumerador.html">Enumerador</a></li>
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
@@ -15,6 +15,7 @@
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
@@ -24,8 +25,8 @@
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-    </ul>
+        <!-- Repita conforme necessário -->
+      </ul>
   </aside>
 </body>
 </html>
