--- a/xml.html
+++ b/xml.html
@@ -21,6 +21,7 @@
 
   <div class="container">
     <aside class="side-menu">
+      <ul>
         <li><a href="filtro.html">Filtro</a></li>
         <li><a href="enumerador.html">Enumerador</a></li>
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
@@ -29,6 +30,7 @@
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
@@ -38,7 +40,8 @@
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <!-- Repita conforme necessário -->
+      </ul>
     </aside>
 
     <main>
