--- a/extrato_pdf_excel.html
+++ b/extrato_pdf_excel.html
@@ -39,6 +39,7 @@
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
@@ -48,8 +49,6 @@
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-
         <!-- Repita conforme necessário -->
       </ul>
     </aside>
