--- a/juntar_excel.html
+++ b/juntar_excel.html
@@ -30,7 +30,7 @@
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
