--- a/juntar_pdf.html
+++ b/juntar_pdf.html
@@ -30,6 +30,16 @@
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <!-- Repita conforme necessário -->
       </ul>
     </aside>
 
