--- a/filtro.html
+++ b/filtro.html
@@ -52,6 +52,9 @@
         <section id="header-area">
           <label for="fileInput"><strong>Selecione um arquivo Excel:</strong></label><br />
           <input type="file" id="fileInput" accept=".xlsx, .xls" />
+            <!-- Botão de exportação -->
+            <button id="btnExport">💾 Exportar para Excel</button>
+
           <div id="checkboxes"></div>
         </section>
 
