links bara lateral

--- a/juntar_pdf.html
+++ b/juntar_pdf.html
@@ -24,22 +24,13 @@
         <li><a href="filtro.html">Filtro</a></li>
         <li><a href="enumerador.html">Enumerador</a></li>
         <li><a href="juntar_ofx.html">Juntar OFX</a></li>
+        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
+        <li><a href="juntar_excel.html">Juntar Excel</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="xml.html">Leitor XML</a></li>
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
-        <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <!-- Repita conforme necessário -->
       </ul>
     </aside>
 
