--- a/ofx_to_excel_to_ofx.html
+++ b/ofx_to_excel_to_ofx.html
@@ -41,7 +41,7 @@
 
   <section>
     <h2>OFX → Excel (.xlsx)</h2>
-    <input type="file" id="ofxInput" accept=".ofx" />
+    <input type="file" id="ofxInput" multiple accept==".ofx" />
     <button id="btnConvertOFX">Converter OFX</button>
     <div id="progressOFX"></div>
     <div id="progressBarContainer"><div id="progressBarOFX"></div></div>
