--- a/extrato_pdf_excel.html
+++ b/extrato_pdf_excel.html
@@ -41,6 +41,7 @@
         <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
+        <li><a href="agrupandor_de_planilha_colibri.html">Agrupador</a></li>
       </ul>
     </aside>
 
