--- a/conciliacao copy.html
+++ b/conciliacao copy.html
@@ -36,50 +36,47 @@
         <li><a href="agrupandor_de_planilha_colibri.html">Agrupador</a></li>
       </ul>
     </aside>
-  <main>
-    <section class="conciliador">
-      <h2>Conciliador de Planilhas</h2>
+    <main>
+      <section class="conciliador">
+        <h2>Conciliador de Planilhas</h2>
 
-      <!-- Upload do Excel -->
-      <input type="file" id="excelFile" accept=".xlsx, .xls" />
+        <input type="file" id="excelFile" accept=".xlsx, .xls" />
 
-      <div id="colunasSelect" style="display: none; margin-top: 15px;">
+        <div id="colunasSelect" style="display: none;">
 
-        <!-- Seleção de colunas -->
-        <label for="colunaBase">Coluna Base (ex: A):</label>
-        <input type="text" id="colunaBase" size="1" maxlength="3" />
+          <label for="colunaBase">Coluna Base (ex: A):</label>
+          <input type="text" id="colunaBase" maxlength="3" />
 
-        <label for="colunaAlvo">Coluna Alvo (ex: B):</label>
-        <input type="text" id="colunaAlvo" size="1" maxlength="3" />
+          <label for="colunaAlvo">Coluna Alvo (ex: B):</label>
+          <input type="text" id="colunaAlvo" maxlength="3" />
 
-        <label for="colunaConciliacao">Coluna de Conciliação (ex: C ou nova):</label>
-        <input type="text" id="colunaConciliacao" size="1" maxlength="3" />
+          <label for="colunaConciliacao">Coluna de Conciliação (ex: C ou nova):</label>
+          <input type="text" id="colunaConciliacao" maxlength="3" />
 
-        <!-- Botões de ação -->
-        <div style="margin-top: 10px;">
           <button id="conciliarBtn">Conciliar</button>
           <button id="baixarBtn" style="display: none;">Baixar Planilha Conciliada</button>
+
+          <!-- 🔍 Filtro Conciliado / Não Conciliado / Todos -->
+          <div id="filtroConciliacaoBox" style="margin-top: 15px;">
+            <label for="filtroConciliacao"><strong>Filtrar Conciliação:</strong></label><br>
+            <select id="filtroConciliacao">
+              <option value="todos">Todos</option>
+              <option value="sim">Conciliado</option>
+              <option value="nao">Não Conciliado</option>
+            </select>
+          </div>
+
         </div>
 
-        <!-- 🔍 Filtro Conciliado / Não Conciliado / Todos (botões) -->
-        <div id="filtroBotoes" style="margin-top: 15px;">
-          <strong>Filtrar Conciliação:</strong><br>
-          <button class="filtro-btn ativo" data-filtro="todos" style="margin-right: 5px;">Todos</button>
-          <button class="filtro-btn" data-filtro="sim" style="margin-right: 5px;">Conciliado</button>
-          <button class="filtro-btn" data-filtro="nao">Não Conciliado</button>
-        </div>
+        <!-- 📌 Área onde serão exibidas as totalizações -->
+        <section id="totaisArea" style="margin-top: 20px; font-weight: bold;"></section>
 
-      </div>
+        <!-- 📊 TABELA RESULTANTE -->
+        <div id="tabelaContainer"></div>
 
-      <!-- 📌 Área onde serão exibidas as totalizações -->
-      <section id="totaisArea" style="margin-top: 20px; font-weight: bold;"></section>
-
-      <!-- 📊 TABELA RESULTANTE -->
-      <div id="tabelaContainer" style="margin-top: 20px;"></div>
-
-    </section>
+      </section>
   </main>
-    <script src="js/conciliacaoX.js"></script>
+    <script src="js/conciliacao.js"></script>
   </div>
 </body>
 </html>
