atualziação dos links

--- a/filtro.html
+++ b/filtro.html
@@ -29,11 +29,9 @@
         <li><a href="juntar_pdf.html">Juntar PDF</a></li>
         <li><a href="juntar_excel.html">Juntar Excel</a></li>
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
-        <li><a href="xml.html">Leitor XML</a></li>
-        <li><a href="extrato_pdf_excel.html">PDF to EXCEL</a></li>
+        <li><a href="extrato_pdf_excel.html">Extrato PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
-        <li><a href="agrupandor_de_planilha_colibri.html">Agrupador</a></li>
       </ul>
     </aside>
   </div>
