--- a/pdftoexcel.html
+++ b/pdftoexcel.html
@@ -38,7 +38,7 @@
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="extrato_pdf_excel.html">Extrato PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
-        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
+        <li><a href="pdftoexcel.html">PDF to Excel</a></li>
       </ul>
     </aside>
   <MAin>
