--- a/leitor_xml.html
+++ b/leitor_xml.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raitec Solutions</title>
   <link rel="stylesheet" href="css/header.css" />
-  <link rel="stylesheet" href="css/menu_lateral.css" />
-  <link rel="stylesheet" href="css/xml.css" />
-</head>
+  <link rel="stylesheet" href="css/menu_lateral.css">
+  <link rel="stylesheet" href="css/leitor_xml.css">
 <body class="ferramentas-page">
   <header>
     <h1>Ferramentas Contábeis</h1>
@@ -19,7 +18,7 @@
     </nav>
   </header>
 
-  <div class="container">
+    <div class="container">
     <aside class="side-menu">
       <ul>
         <li><a href="filtro.html">Filtro</a></li>
@@ -30,20 +29,25 @@
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="extrato_pdf_excel.html">Extrato PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
-        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
+        <li><a href="pdftoexcel.html">PDF para Excel</a></li>
+        <li><a href="xml.html">Leitor de XML</a></li>
+
       </ul>
     </aside>
-
     <main>
-      <h1>Visualizador de Nota Fiscal Eletrônica</h1>
-      <input type="file" id="xmlInput" accept=".xml" />
-      <div id="output"></div>
+
+      <div class="toolbar">
+        <input type="file" id="fileInput" accept=".xml" multiple>
+        <button class="btn" id="btnRender">Processar XMLs</button>
+        <button class="btn secondary" id="btnLimpar">Limpar</button>
+        <button class="btn" id="btnImprimir">Salvar PDF</button>
+      </div>
+
+      <div id="totais-gerais"></div>
+      <div id="danfe-container"></div>
 
     </main>
 
-    </div>
-
-  <!-- Script principal -->
-  <script src="js/xml.js"></script>
+<script src="js/leitor_xml.js"></script>
 </body>
 </html>
