adição do novo combinador de numeros

--- a/juntar_excel.html
+++ b/juntar_excel.html
@@ -30,7 +30,9 @@
         <li><a href="ofx_to_excel_to_ofx.html">OFX to Excel to OFX</a></li>
         <li><a href="extrato_pdf_excel.html">Extrato PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
-        <li><a href="pdf_to_excel.html">PDF to Excel</a></li>
+        <li><a href="pdftoexcel.html">PDF para Excel</a></li>
+        <li><a href="xml.html">Leitor de XML</a></li>
+        <li><a href="combinacoes.html">Combinações</a></li>
       </ul>
     </aside>
     <main>
