--- a/leitor_xml.html
+++ b/leitor_xml.html
@@ -31,7 +31,7 @@
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="pdftoexcel.html">PDF para Excel</a></li>
         <li><a href="xml.html">Leitor de XML</a></li>
-
+        <li><a href="combinacoes.html">Combinações</a></li>
       </ul>
     </aside>
     <main>
