--- a/pdftoexcel.html
+++ b/pdftoexcel.html
@@ -39,7 +39,7 @@
         <li><a href="extrato_pdf_excel.html">Extrato PDF to EXCEL</a></li>
         <li><a href="conciliacao.html">Conciliação</a></li>
         <li><a href="pdftoexcel.html">PDF para Excel</a></li>
-        <li><a href="xml.html">Leitor de XML</a></li>
+        <li><a href="leitor_xml.html">Leitor de XML</a></li>
         <li><a href="combinacoes.html">Combinações</a></li>
       </ul>
     </aside>
